--- a/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
@@ -41,4 +41,6 @@
          For example, a device with Home, Back and Recents keys would set this
          config to 19. -->
     <integer name="config_deviceHardwareKeys">19</integer>
+    <!-- Button backlight value ranges from 0 to 255; 0 is considered as Disabled -->
+    <integer name="config_buttonBrightnessSettingDefault">0</integer>
 </resources>
