--- a/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
@@ -40,4 +40,6 @@ for each
 set this
          config to 19. -->
     <integer name="config_deviceHardwareKeys">19</integer>
+    <!-- FP Location -->
+    <integer name="config_fingerprintSensorLocation">0</integer>
 </resources>
